syntax = "proto3";
package pbgo;

// 玩家信息
message Player {
    int32 playerID = 1;
    string playerName = 2;
    float centerX = 3;
    float centerY = 4;
    float r = 5;
    int32 speed = 6;
    repeated MoveFrame moveFrames = 7;
}

message Food {
    int32 id = 1;
    float centerX = 2;
    float centerY = 3;
    float r = 4;
}

// 进入游戏
message EnterGame {
    int32 playerID = 1;
}

message EnterGameAck {
    Player self = 1;
    repeated Player players = 2;
    repeated Food foods = 3;
}

// 服务器状态推送刷新
message Refresh {
    repeated Player players = 1;
    repeated Food foods = 2;
    int32 selfMod = 3;
}

// 操作
message OperateMsg {
    float angle = 1;
    float maxWidth = 2;
    float maxHeight = 3;
    int32 mod = 4;
}

// 客户端计算后，上报位置
message UploadPos {
    float centerX = 1;
    float centerY = 2;
    int32 mod = 3;
}

// 移动数据帧
message MoveFrame {
    float centerX = 1;
    float centerY = 2;
    float r = 3;
}